# AirCraft

./: .gitignore  README.md
src/ac_bringup/: CMakeLists.txt  package.xml
src/ac_bringup/config/: aircraft.rviz  classify_params.yaml  solver_params.yaml  transport_params.yaml  usb_cam_info.yaml
src/ac_bringup/launch/: bringup.launch.py  test.launch.py
src/ac_bringup/script/: usb.sh  watchdog.sh
src/ac_camera/: CMakeLists.txt  package.xml
src/ac_camera/include/: cam_interface.hpp  usb_cam.hpp
src/ac_camera/src/: cam_interface.cpp  usb_cam.cpp
src/ac_classify/: CMakeLists.txt  package.xml
src/ac_classify/include/: classify_basic.hpp  classify_node.hpp
src/ac_classify/src/: classify_node.cpp
src/ac_solver/: CMakeLists.txt  package.xml
src/ac_solver/include/: solvepnp_node.hpp
src/ac_solver/src/: solvepnp_node.cpp
src/ac_transport/: CMakeLists.txt  package.xml
src/ac_transport/include/: usb.hpp  usb_node.hpp
src/ac_transport/src/: usb_node.cpp
test/: CMakeLists.txt  main.cpp
test/include/: basic.hpp  classify.hpp
test/src/: classify.cpp
